--- a/add-car.html
+++ b/add-car.html
@@ -22,31 +22,49 @@
       <label for="carNumber">Car Number:</label>
       <input type="text" id="carNumber" placeholder="Enter car number" required>
 
-      <label for="ownerName">Owner Name:</label>
-      <input type="text" id="ownerName" placeholder="Enter owner name" required>
-
       <label for="slotNumber">Slot Number:</label>
       <input type="number" id="slotNumber" placeholder="Enter slot number" required>
 
       <button type="submit">Add Car</button>
     </form>
+
+    <div id="errorMessage" style="color: red; display: none;">Error: Could not add car. Please try again.</div>
+    <div id="successMessage" style="color: green; display: none;">Car added successfully!</div>
   </main>
 
   <script>
-    // Ensure the user is logged in before accessing this page
-    fetch('http://127.0.0.1:5000/api/check_login', {
-      method: 'GET',
-      headers: {
-        'Content-Type': 'application/json',
+    // Simplified fetch method for form submission
+    document.getElementById('addCarForm').addEventListener('submit', function(event) {
+      event.preventDefault();
+  
+      const carNumber = document.getElementById('carNumber').value;
+      const slotNumber = document.getElementById('slotNumber').value;
+  
+      if (!carNumber || !slotNumber) {
+        alert('Car number and slot are required.');
+        return;
       }
-    })
-    .then(response => response.json())
-    .then(data => {
-      if (data.message !== 'Logged in') {
-        window.location.href = 'login.html'; // Redirect to login if not logged in
-      }
-    })
-    .catch(error => console.error('Error:', error));
+  
+      fetch('http://127.0.0.1:5000/api/add_car', {
+        method: 'POST',
+        headers: { 
+          'Content-Type': 'application/json' 
+        },
+        body: JSON.stringify({ car_number: carNumber, slot_number: slotNumber }),
+        credentials: 'include'  // Ensures that cookies (session) are sent with the request
+      })
+      .then(response => response.json())
+      .then(data => {
+        if (data.message === 'Car added successfully') {
+          alert('Car added successfully!');
+          document.getElementById('addCarForm').reset(); // Reset form on success
+        } else {
+          alert(data.message || 'An error occurred while adding the car.');
+        }
+      })
+      .catch(() => alert('An error occurred. Please try again.'));
+    });
   </script>
+  
 </body>
 </html>
